--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Bla bla bla promotion
                             <div class="twelve columns">
 
                                 <h3>UX Consultant</h3>
-                                <p class="info">Sopra Steria <span>&bull;</span> <em class="date">October 2016 - October 2017</em></p>
+                                <p class="info">Sopra Steria <span>&bull;</span> <em class="date">October 2016 - Present</em></p>
                                 User Experience consultant currently working within the Regional Government sector. I have been involved with a number of clients including <a href="http://www.scot.nhs.uk/"><b>NHS Scotland</b></a> and <a href="https://www.gov.uk/government/organisations/student-loans-company"><b>Student Loans Company</b></a>.
                                 <p>
 
@@ -239,7 +239,7 @@ Bla bla bla promotion
                                     </li>
                                     <li class="chart__bar" data-skill="120">
                                         <span class="chart__label">
-                                            Lame puns
+                                            Rubbish puns
                                         </span>
                                     </li>
                                     </li>
