--- a/index.html
+++ b/index.html
@@ -25,28 +25,17 @@
     <link rel="stylesheet" href="css/media-queries.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/Barstyle.css">
-    <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">-->
-
     <link rel='stylesheet prefetch' href='http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css'>
     <link rel='stylesheet prefetch' href='http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css'>
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blogstyle.css">
 
-
-
-
-    <!-- Script
-================================================== -->
-    <script src="js/modernizr.js"></script>
 
     <!-- Favicons
 ================================================== -->
     <link rel="shortcut icon" href="favicon.png">
 
 </head>
-
-
 
 <body>
 
@@ -56,18 +45,16 @@
         <div class="row banner">
             <div class="banner-text">
                 <h1 class="responsive-headline">Fraser Smith</h1>
-                <h3>I'm an Edinburgh based <span>UX Consultant</span>, currently working in the Regional Government Sector.
-
+                <h3>I'm an Edinburgh based <span>UX Consultant</span>, currently working in the Government and Public Sector.
                     <hr />
                     <ul class="social">
-                        <li><a href="https://twitter.com/fraserasmith"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/fraser-smith-b3931a56"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="mailto:fraser@frasersmith.me"><i class="fa fa-envelope"></i></a></li>
+                        <li><a href="https://twitter.com/fraserasmith" tabindex="0"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/fraser-smith-b3931a56" tabindex="0"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="mailto:fraser@frasersmith.me" tabindex="0"><i class="fa fa-envelope"></i></a></li>
                     </ul>
             </div>
         </div>
         </div>
-
     </header>
     <!-- Header End -->
 
@@ -160,14 +147,11 @@ Bla bla bla promotion
                     <div class="twelve columns">
 
                         <h3>BSc Interactive Media Design</h3>
-                        <p class="info">Edinburgh Napier University <span>&bull;</span> <em class="date">Aug 2013 - Sep 2016</em></p>
+                        <p class="info">Edinburgh Napier University <span>&bull;<em class="date">Aug 2013 - Sep 2016</em></p>
                         </span>
-                        <p></p>With Distinction</em>
-                        </p>
-
-
+                            <p>With Distinction
+                            </p>
                     </div>
-
                 </div>
                 <!-- item end -->
 
@@ -177,110 +161,6 @@ Bla bla bla promotion
         </div>
         <!-- End Work -->
 
-        <!-- Skills
------------------------------------------------ -->
-        <div class="row skill">
-
-            <div class="three columns header-col">
-                <h1><span>Skills</span></h1>
-            </div>
-
-            <div class="nine columns main-col">
-                <div class="twelve columns main-col">
-
-
-                    <body>
-                        <div class="skills">
-                            <ul class="lines">
-                                <li class="line l--0">
-                                    <span class="line__label">
-                                    Uh... next question      </span>
-                                </li>
-                                <li class="line l--25">
-                                    <span class="line__label">
-                                    Rookie      </span>
-                                </li>
-                                <li class="line l--50">
-                                    <span class="line__label">
-                                    Pretty good
-                                </span>
-                                </li>
-                                <li class="line l--75">
-                                    <span class="line__label">
-                                    Smokin'
-                                </span>
-                                </li>
-                                <li class="line l--100">
-                                    <span class="line__label">
-                                    Shit hot
-                                </span>
-                                </li>
-                            </ul>
-
-                            <div class="charts">
-                                <div class="chart chart--dev">
-                                    <!--      <span class="chart__title">Software</span>-->
-                                    <ul class="chart--horiz">
-                                        <li class="chart__bar" data-skill="95">
-                                            <span class="chart__label">
-                                            Axure 
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="90">
-                                            <span class="chart__label">
-                                            Sketch
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="80">
-                                            <span class="chart__label">
-                                            Photoshop
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="65">
-                                            <span class="chart__label">
-                                            Illustrator
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="55">
-                                            <span class="chart__label">
-                                            After Effects
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="45">
-                                            <span class="chart__label">
-                                            CSS/HTML
-                                        </span>
-                                        </li>
-                                        <li class="chart__bar" data-skill="120">
-                                            <span class="chart__label">
-                                            Rubbish puns
-                                        </span>
-                                        </li>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-
-
-
-                            </ul>
-                        </div>
-                </div>
-            </div>
-            <script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js'></script>
-
-
-            </body>
-
-
-
-        </div>
-        <!-- main-col end -->
-
-        </div>
-        <!-- End skills -->
-
     </section>
     <!-- Resume Section End-->
 
@@ -288,38 +168,43 @@ Bla bla bla promotion
 
     <!-- Testimonials Section
 ================================================== -->
-    <section id="testimonials">
+    <section id="testimonials" tabindex="-1">
 
         <body>
-            <div class='content'>
-                <div class='slider single-item'>
-                    <div class='quote-container'>
-                        <div class='quote'>
-                            <blockquote>
+            <div class='content' tabindex="-1">
+                <div class='slider single-item' tabindex="-1">
+                    <div class='quote-container' tabindex="-1">
+                        <div class='quote' tabindex="-1">
+                            <blockquote tabindex="0">
                                 <p>From the minute Fraser started with us it was very clear that he is a very knowledgeable designer and has a good grasp of design methods and principals. I am very impressed by his skill-set in regards to prototyping and his deliverables are always of high quality. He has been a valuable asset to the project and he will certainly be missed come the time he progresses on to a new project or client.
                                 </p>
                                 <cite>
             <span>Anthony Tabram</span>
+                                    <br>
+            User Experience Designer
             <br>
             Student Loans Company
           </cite>
                             </blockquote>
                         </div>
                     </div>
-                    <div class='quote-container'>
-                        <div class='quote'>
-                            <blockquote>
-                                <p>Fraser has worked hard to get himself into the position of UX Designer, now overseeing all design work from an end-to-end perspective, through nothing other than hard work, the want to succeed and determination, and all within a very short space of time. Everyone in the team has nothing but good things to say about Fraser and that in itself is a true testament for the type of person he is.
+                    <div class='quote-container' tabindex="-1">
+                        <div class='quote' tabindex="-1">
+                            <blockquote tabindex="0">
+                                <p>Fraser has worked hard to get himself into the position of Lead UX Designer, now overseeing all design work from an end-to-end perspective, through nothing other than hard work, the want to succeed and determination, and all within a very short space of time. Everyone in the team has nothing but good things to say about Fraser and that in itself is a true testament for the type of person he is.
 
                                 </p>
                                 <cite>
             <span>Peter Shopp</span>
+                                    <br>
+            Product Owner
             <br>
             Student Loans Company
           </cite>
                             </blockquote>
                         </div>
                     </div>
+
                 </div>
             </div>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
@@ -406,7 +291,7 @@ Bla bla bla promotion
     <script src="js/magnific-popup.js"></script>
     <script src="js/init.js"></script>
     <script src="js/blog.js.js"></script>
-
+    <script src="js/modernizr.js"></script>
 </body>
 
-</html>2
+</html>
