--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!--- Basic Page Needs
 ================================================== -->
     <meta charset="utf-8">
-    <title>Fraser Smith</title>
+    <title>Fraser Smith - CV</title>
     <meta name="description" content="User Experience Consultant">
     <meta name="author" content="Fraser Smith">
+    <meta property="og:image" content="http://www.frasersmith.me/images/Birdseye-min.jpg"  />
+
 
     <!-- Mobile Specific Metas
 ================================================== -->
