--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Fraser Smith - CV</title>
     <meta name="description" content="User Experience Consultant">
     <meta name="author" content="Fraser Smith">
-    <meta property="og:image" content="http://www.frasersmith.me/images/Birdseye-min.jpg"  />
+    <meta property="og:image" content="//images/Birdseye-min.jpg"  />
 
 
     <!-- Mobile Specific Metas
