--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Bla bla bla promotion
 
                         <h3>UX Consultant</h3>
                         <p class="info">Sopra Steria <span>&bull;</span> <em class="date">October 2016 - Present</em></p>
-                        User Experience consultant currently working within the Regional Government sector. I have been involved with a number of clients including <a href="http://www.scot.nhs.uk/"><b>NHS Scotland</b></a> and <a href="https://www.gov.uk/government/organisations/student-loans-company"><b>Student Loans Company</b></a>.
+                        User Experience consultant currently working within the UK Government sector. I have been involved with a number of clients including <a href="http://www.scot.nhs.uk/"><b>NHS Scotland</b></a> and <a href="https://www.gov.uk/government/organisations/student-loans-company"><b>Student Loans Company</b></a>.
                         <p>
 
 
