--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <meta name="description" content="User Experience Consultant">
     <meta name="author" content="Fraser Smith">
     <meta property="og:image" content="//images/Birdseye-min.jpg"  />
+    
+    <!---Google Analytics
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112495260-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112495260-1');
+</script>
 
 
     <!-- Mobile Specific Metas
